# Omnidirectional-Basketball-Robot

./: .gitignore  README.md
Defense_bot/catkin_ws/devel/: .catkin  .rosinstall  local_setup.fish  setup.sh
Defense_bot/catkin_ws/devel/lib/motor_control/: motor_control.py
Defense_bot/catkin_ws/devel/lib/pkgconfig/: encoder_pub.pc  esp32_com.pc  motor_control.pc  robocon_node.pc  ros_bno08x.pc
Defense_bot/catkin_ws/src/encoder_pub/: CMakeLists.txt
Defense_bot/catkin_ws/src/esp32_com/: .package.xml.swp  CMakeLists.txt  package.xml
Defense_bot/catkin_ws/src/robocon_node/: CMakeLists.txt  package.xml
Defense_bot/catkin_ws/src/robocon_node/launch/: R1.launch
Defense_bot/catkin_ws/src/robocon_node/scripts/: bno055_data.py  bno055_data.py.save  bno055_data.pyu  bno085_data.py  bno085_node.py  computation.py  dribble.py  encoder_data.py  encoder_spi.py  esp32_dribble.py  motor_control.py  ps4_conversion.py  stepper_angle.py  upper_control.py
Defense_bot/catkin_ws/src/robocon_node/src/: bno085_data_node.cpp
Shooting_bot/: test_lidar.py
Shooting_bot/.catkin_tools/profiles/default/: devel_collisions.txt
Shooting_bot/src/robocon_node/: CMakeLists.txt  package.xml  package.xml.save
Shooting_bot/src/robocon_node/launch/: efk.launch
Shooting_bot/src/robocon_node/msg/: encoder_reading.msg
Shooting_bot/src/robocon_node/scripts/: bno055_data.py  bno_conversion.py  computation.py  coordinates.py  encoder_localisation.py  encoder_spi.py  lidar_360.py  lidar_data.py  position_node.py  ps4_conversion.py  scan_to_coordinates.py  udo systemctl stop serial-getty@ttyAMA0.service  ydlidar_scan_publisher.py
src/robocon_node/: nano.save
src/robocon_node/config/: ekf.yaml
src/robocon_node/launch/: R2.launch
src/robocon_node/msg/: Encoders.msg
src/robocon_node/scripts/: computation.py.save  encoder_data.py  encoder_direct.py  gotogoal_3wheel.py  gotogoal_motor.py  motor_control.py  optical_sensor.py  ydlidar_x2.py
(+10 files in other folders)
